name:                ProjectEuler
version:             0.1.0.0
author:              Elise Dettrick
maintainer:          elise@dettrick.net
build-type:          Simple
cabal-version:       >=1.10

executable problem001
  main-is:           Problem001.hs
  ghc-options:       -main-is Problem001
  build-depends:     base >=4.9 && <4.10, tasty-hunit >= 0.10.0.1, HUnit >= 1.6.0.0
  default-language:  Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: TestDriver.hs
  hs-source-dirs:    .
  default-language:  Haskell2010
  build-depends:     base, tasty >= 1.0.1.1, tasty-hunit >= 0.10.0.1, HUnit >= 1.6.0.0
